# DnD

./: CMakeLists.txt  Constants.hpp  Enum.hpp  HexBitset.hpp  HexBitsetPack.hpp  Main.cpp  Makefile  Other.cpp  OtherClasses.hpp  QAbstractDatabaseWindow.hpp  QDatabaseInterface.cpp  QDatabaseInterface.hpp  QDatabaseInterfaceIntermediary.hpp  QDatabaseWindow.cpp  QDatabaseWindow.hpp  QHomeInterface.hpp  QPowerDatabaseWindow.hpp  QSpellDatabaseWindow.hpp
files/: powerBits  powerInfos  powerNames  powerTexts  powers.txt  spellBits  spellInfos  spellNames  spellTexts  spells.txt
